<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.creanga</groupId>
    <artifactId>webserver</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>Proto webserver</name>
    <description>Proto webserver</description>
    <url>https://github.com/cornelcreanga/webserver</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Cornel Creanga</name>
            <email>cornelcreanga@yahoo.com</email>
            <timezone>UTC+02:00</timezone>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git@github.com/cornelcreanga/webserver</connection>
        <developerConnection>scm:git:git@github.com/cornelcreanga/webserver</developerConnection>
        <url>git@github.com/cornelcreanga/webserver</url>
    </scm>

    <properties>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <slf4j-api.version>1.7.26</slf4j-api.version>
        <logback-core.version>1.2.3</logback-core.version>
        <logback-classic.version>1.2.3</logback-classic.version>
        <junit.version>4.10</junit.version>

        <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>

        <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
        <maven-surefire-plugin.version>2.19</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>2.19</maven-failsafe-plugin.version>

        <skipTests>false</skipTests>
        <skipITs>${skipTests}</skipITs>
        <skipUTs>${skipTests}</skipUTs>
        <fluent-hc.version>4.5.8</fluent-hc.version>
        <httpclient.version>4.5.8</httpclient.version>
        <httpasyncclient.version>4.1.4</httpasyncclient.version>
        <httpcore.version>4.4.11</httpcore.version>
        <snakeyaml.version>1.24</snakeyaml.version>
    </properties>

    <dependencies>

        <!--<dependency>-->
        <!--<groupId>org.yaml</groupId>-->
        <!--<artifactId>snakeyaml</artifactId>-->
        <!--<version>${snakeyaml.version}</version>-->
        <!--</dependency>-->


        <!--Test dependencies-->

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
            <version>${junit.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <scope>test</scope>
            <version>${httpclient.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpasyncclient</artifactId>
            <scope>test</scope>
            <version>${httpasyncclient.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpcore</artifactId>
            <scope>test</scope>
            <version>${httpcore.version}</version>
        </dependency>
        <!--Test dependencies end -->


    </dependencies>

    <build>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>1.11</source>
                    <target>1.11</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven-assembly-plugin.version}</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>com.ccreanga.webserver.Server</mainClass>
                        </manifest>
                    </archive>
                    <finalName>${project.artifactId}</finalName>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <skipTests>${skipUTs}</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
                <configuration>
                    <skipTests>${skipTests}</skipTests>
                    <skipITs>${skipITs}</skipITs>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>